Fix image stretch

--- a/src/Pages/Home/HighlightsCarousel.css
+++ b/src/Pages/Home/HighlightsCarousel.css
@@ -15,7 +15,6 @@
 
 .homeHighlights_carouselCard img {
   max-height: 100%;
-  max-width: 100%;
   margin: auto;
 }
 
